--- a/About.html
+++ b/About.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <title>About</title>
 </head>
 <body>
-    <h1>About us</h1>
+    <!-- header -->
+    <div>
+    <div class="header">
+        <!-- logo -->
+        <div class="logo">
+            <img src="C:\Users\win 10\Downloads\WhatsApp Image 2023-08-10 at 6.30.45 PM.jpeg" height="100%"  ;>
+        </div>
+        </div>
+        
+</div>
+<div>
+    <style> </style>
+        <!-- heading -->
+    <div class="heading">
+    <h1 style="text-align: center;">About us</h1>
+</div>
+</div>
+<!-- Question -->
+<div>
+<div class="question">
+    
+    <h4 style="font-size: larger; text-align: center;">Who are 2D's and what are there Goals?</h4>
+</div>
+<div class="introduction">
+    <p> <span style="font-weight: bolder; font-size: large; text-align: center;">2d's</span> is an IT company working in many fields like Web Development, App Development, Graphics Designing, etc. We are working in this field for 2 years and recievd good reviews from our cutomers  </p>
+</div>
+</div>
 </body>
 </html>
