--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- header -->
-    
-    <div class="header">
-        <div class="logo">
-            <img src="" alt="Logo">
+    <div>
+        <!-- header -->
+
+        <div class="header">
+            <div class="logo">
+                <div>
+                    <img src="" alt="Logo">
+                </div>
+            </div>
+            <div class="webname">
+                <h1>
+                    2D's
+                </h1>
+            </div>
+            <div class="links">
+                <a href="About.html">About</a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
         </div>
-        <div>
-            <h1>
-                2D's
-            </h1>
-        </div>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </div>  
     </div>
 </body>
+
 </html>
