--- a/About.html
+++ b/About.html
@@ -20,17 +20,19 @@
         
 </div>
 <div>
-    <style> </style>
+
         <!-- heading -->
     <div class="heading">
-    <h1 style="text-align: center;">About us</h1>
-</div>
-</div>
+    <h1 style="text-align: center; background-image: url(https://images.wallpapersden.com/image/download/programming-coding-language_bGhpbm6UmZqaraWkpJRmbmdlrWZlbWU.jpg);">About us</h1>
+
+
 <!-- Question -->
 <div>
 <div class="question">
     
     <h4 style="font-size: larger; text-align: center;">Who are 2D's and what are there Goals?</h4>
+</div>
+</div>
 </div>
 <div class="introduction">
     <p> <span style="font-weight: bolder; font-size: large; text-align: center;">2d's</span> is an IT company working in many fields like Web Development, App Development, Graphics Designing, etc. We are working in this field for 2 years and recievd good reviews from our cutomers  </p>
