--- a/About.html
+++ b/About.html
@@ -23,11 +23,11 @@
 
         <!-- heading -->
     <div class="heading">
-    <h1 style="text-align: center; background-image: url(https://images.wallpapersden.com/image/download/programming-coding-language_bGhpbm6UmZqaraWkpJRmbmdlrWZlbWU.jpg);">About us</h1>
+    <h1>About us</h1>
 
 
 <!-- Question -->
-<div>
+
 <div class="question">
     
     <h4 style="font-size: larger; text-align: center;">Who are 2D's and what are there Goals?</h4>
