--- a/About.html
+++ b/About.html
@@ -9,6 +9,8 @@
     <title>About</title>
 </head>
 <body>
+    <div>
+        <div>
     <!-- header -->
     <div>
     <div class="header">
@@ -27,16 +29,19 @@
 
 
 <!-- Question -->
-
 <div class="question">
     
     <h4 style="font-size: larger; text-align: center;">Who are 2D's and what are there Goals?</h4>
 </div>
 </div>
 </div>
+</div>
 <div class="introduction">
-    <p> <span style="font-weight: bolder; font-size: large; text-align: center;">2d's</span> is an IT company working in many fields like Web Development, App Development, Graphics Designing, etc. We are working in this field for 2 years and recievd good reviews from our cutomers  </p>
+    <p style="text-align: left;"> <span style="font-weight: bolder; font-size: 200; text-align: center;">2d's</span> is an IT Software Company that was found in june 2023 in Pakistan. We work with higly qulified and experienced team. <br>Services we provide are Web development, App development, Graphics Designing, Social Media Marketting and Networking.</p>
 </div>
+ <video> 
+    <source src="C:\Users\win 10\Downloads\WhatsApp Video 2023-08-11 at 7.20.21 PM.mp4" type="video/mp4" ></video>
 </div>
+
 </body>
 </html>
