some work in about

--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 </head>
 
 <body>
-    <div>
-        <!-- header -->
+    <!-- Page -->
 
-        <div class="header">
-            <div class="logo">
-                <div>
-                    <img src="" alt="Logo">
+    <div class="page">
+
+        <!-- header -->
+        <div class="homeheader">
+            <div class="homelogo">
+                <div style="width: 20%">
+                    <img style="width: 100%;" src="./assets/2ds logo.jpg" alt="Logo">
                 </div>
             </div>
             <div class="webname">
-                <h1>
-                    2D's
-                </h1>
+                <div>
+                    <h1 style="color: white; text-align: center;" >
+                        2D's
+                    </h1>
+                </div>
             </div>
             <div class="links">
-                <a href="About.html">About</a>
-                <a href=""></a>
-                <a href=""></a>
+                <div>
+                    <a class="link" href="About.html">About</a>
+                    <a class="link" href=""></a>
+                    <a class="link" href=""></a>
+                </div>
             </div>
         </div>
     </div>
