--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="links">
                 <div>
                     <a class="link" href="About.html">About</a>
-                    <a class="link" href=""></a>
+                    <br>
+                    <a class="link" href="Our Team.html">Our Team</a>
                     <a class="link" href=""></a>
                 </div>
             </div>
