--- a/our team.html
+++ b/our team.html
@@ -14,12 +14,33 @@
                 <div class="header">
                     <!-- logo -->
                     <div class="logo">
-                        <img style="width: 30%" src="./assets/2ds logo.jpg">
+                        <img style="width: 40%" src="./assets/2ds logo.jpg">
                     </div>
                     <div>
                         <a class="link" href="index.html">Home</a>
+                        <a class="link" href="About.html">About</a>
                     </div>
                 </div>
-    
-</body>
+                <!-- heading -->
+                <div class="heading" style="color: black;">
+                    <h1>Our Team</h1>
+                </div>
+                <!-- team -->
+                <div class="team" style="font-size: x-large; width: 100%;">
+                    All companies and industries are based on a team that's why the team should be good and 
+                    experienced so that the industry or company will work perfect. 
+                    <span style="font-weight: bolder; font-size: 110%;">2D's</span> team is well experienced 
+                    and hard working. we devided our team in different sections one team is working for 
+                    development, one for networking, one for graphics designing, and one for social media marketting.
+                    But our core team members are   
+                </div>
+                <div>
+                <div class="image">
+                    <img src="assets/my pic.jpg" width="90%" height="50%">
+
+                </div>
+                
+            </div>
+        </div>
+    </body>
 </html>
